--- a/index.html
+++ b/index.html
@@ -57,12 +57,18 @@
         <h3 class="title-h3 section-3-title">Catch the moment. Start your journey now</h3>
         <p class="main-txt section-3-txt">Some of the Earth's greatest landscapes are threatened by increased road construction, oil and gas exploration. We aim to protect these areas from inappropriate development, but we cannot achieve our goals alone.</p>
         <div class="section-3-wrap">
-            <img src="img/3.jpg" class="section-3-wrap-item-top" alt="">
-            <img src="img/5.jpg" class="section-3-wrap-item-top" alt="">
-            <img src="img/7.jpg" class="section-3-wrap-item-top" alt="">
-            <img src="img/4.jpg" class="section-3-wrap-item-bottom" alt="">
-            <img src="img/6.jpg" class="section-3-wrap-item-bottom" alt="">
-            <img src="img/8.jpg" class="section-3-wrap-item-bottom" alt="">
+            <div class="section-3-wrap-item-left">
+                <img src="img/3.jpg" alt="">
+                <img src="img/4.jpg" alt="">
+            </div>
+            <div class="section-3-wrap-item-center">
+                <img src="img/5.jpg" alt="">
+                <img src="img/6.jpg" alt="">
+            </div>
+            <div class="section-3-wrap-item-right">
+                <img src="img/7.jpg" alt="">
+                <img src="img/8.jpg" alt="">
+            </div>
         </div>
     </div>
 </section>
@@ -120,13 +126,120 @@
                 </label>
                 <button type="submit" class="btn form-btn">Send</button>
             </form>
-
-
         </div>
         </div>
     </div>
-
 </section>
+
+<section class="section-7">
+    <div class="container">
+        <div class="section-7-wrap">
+      <h3 class="title-h3 section-7-wrap-title">To do list</h3>
+        <ol class="section-7-wrap-ol">
+            <li>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li>
+            <li>Suspendisse auctor rutrum suscipit. Maecenas eu lorem odio. Sed sed efficitur odio. Morbi erat lo.</li>
+            <li>Morbi nisi nulla, vehicula quis erat et, porta rutrum turpis. Nulla eget libero lectus.</li>
+        </ol>
+        </div>
+    </div>
+</section>
+
+<section class="section-8">
+    <div class="container">
+        <div class="sheet">
+            <div class="main-txt sheet-title">
+                <p>Location</p>
+                <p>Event</p>
+                <p>Year</p>
+                <p>Duration</p>
+            </div>
+            <div class="main-txt sheet-title sheet-txt">
+                <p>Hanford Reach</p>
+                <p>Hiking tour</p>
+                <p>2019</p>
+                <p>5 days</p>
+            </div>
+            <div class="main-txt sheet-title sheet-txt">
+                <p>Payette</p>
+                <p>Hiking tour</p>
+                <p>2019</p>
+                <p>3 days</p>
+            </div>
+            <div class="main-txt sheet-title sheet-txt">
+                <p>Saint Joe</p>
+                <p>Rufting</p>
+                <p>2019</p>
+                <p>1 days</p>
+            </div>
+            <div class="main-txt sheet-title sheet-txt">
+                <p>Flathead</p>
+                <p>Camping trip</p>
+                <p>2020</p>
+                <p>7 days</p>
+            </div>
+            <div class="main-txt sheet-title sheet-txt">
+                <p>Newcastle</p>
+                <p>Rufting</p>
+                <p>2020</p>
+                <p>2 days</p>
+            </div>
+            <div class="main-txt sheet-title sheet-txt">
+                <p>Salmon-Challis</p>
+                <p>Fishing</p>
+                <p>2020</p>
+                <p>3 days</p>
+            </div>
+            <div class="main-txt sheet-title sheet-txt">
+                <p>Malheur</p>
+                <p>Hiking tour</p>
+                <p>2020</p>
+                <p>5 days</p>
+            </div>
+        </div>
+
+    </div>
+</section>
+
+<section class="section-8">
+    <div class="container">
+        <div class="section-8-wrap">
+            <img src="img/10.jpg" alt="map">
+        </div>
+    </div>
+</section>
+
+<section class="section-9">
+    <div class="container">
+        <h3 class="title-h3">Subscribe</h3>
+        <p class="main-txt section-9-txt">Sign up in form below to receive news and updates.</p>
+        <div class="section-9-cla">
+            <form class="form section-9-form">
+                <label>
+                    <input type="email" id="mail" name="user_mail" " placeholder="E-mail">
+                </label>
+                <button type="submit" class="btn form-btn">Subscribe</button>
+            </form>
+        </div>
+    </div>
+</section>
+
+<footer class="footer">
+    <div class="container">
+        <a href="#" class="logo footer-logo">ELMO</a>
+        <nav class="navigation footer-nav">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Gallery</a>
+            <a href="#">Contacts</a>
+        </nav>
+        <div class="footer-social">
+            <img src="img/11.png" alt="">
+            <img src="img/12.png" alt="">
+            <img src="img/13.png" alt="">
+        </div>
+
+    </div>
+</footer>
 
 </body>
 </html>
