tablet, mobile version

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             <div class="btn">
                 <a href="#">Start now</a>
             </div>
+            <div class="burger-menu">
+                <img src="img/menu.png" alt="">
+            </div>
         </header>
         <h1 class="title-h1 section-1-title">Build a beautiful website just in few clicks</h1>
         <div class="section-1-img">
@@ -56,6 +59,7 @@
     <div class="container">
         <h3 class="title-h3 section-3-title">Catch the moment. Start your journey now</h3>
         <p class="main-txt section-3-txt">Some of the Earth's greatest landscapes are threatened by increased road construction, oil and gas exploration. We aim to protect these areas from inappropriate development, but we cannot achieve our goals alone.</p>
+        <h3 class="title-h3 section-3-title-mob">Gallery</h3>
         <div class="section-3-wrap">
             <div class="section-3-wrap-item-left">
                 <img src="img/3.jpg" alt="">
@@ -196,17 +200,18 @@
                 <p>5 days</p>
             </div>
         </div>
-
-    </div>
-</section>
-
-<section class="section-8">
-    <div class="container">
         <div class="section-8-wrap">
-            <img src="img/10.jpg" alt="map">
+            <img src="img/10.jpg" class="section-8-wrap-img" alt="map">
+        </div>
+        <div class="section-8-wrap">
+            <img src="img/map-mob.png"  class="section-8-wrap-img-mob" alt="map">
+        </div>
+        <div class="section-8-wrap">
+            <img src="img/map-tablet.png"  class="section-8-wrap-img-tablet" alt="map">
         </div>
     </div>
 </section>
+
 
 <section class="section-9">
     <div class="container">
@@ -215,7 +220,7 @@
         <div class="section-9-cla">
             <form class="form section-9-form">
                 <label>
-                    <input type="email" id="mail" name="user_mail" " placeholder="E-mail">
+                    <input type="email" name="user_mail" placeholder="E-mail">
                 </label>
                 <button type="submit" class="btn form-btn">Subscribe</button>
             </form>
